--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
+    "react-parallax-tilt": "^1.7.286",
     "react-pdf": "^9.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
