Fixed ESLint warning, improved Featured Projects section

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "swiper": "^11.2.2",
     "tilt.js": "^1.2.1",
+    "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
