Updated AboutMePage with responsive design, floating circles around profile, education & experience sections, fun facts, and skills sections with GSAP and Tilt animations

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "react-tilt": "^1.0.2",
     "swiper": "^11.2.2",
     "tilt.js": "^1.2.1",
     "vanilla-tilt": "^1.8.1",
